# kythia-quest-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.yml  package.json
migrations/: 20241224000001_initial.sql  20241224020000_normalize_quests.sql
prisma/: schema.prisma
prisma/migrations/20251113023018_init/: migration.sql
src/: config.rs  index.js  main.rs
src/db/: mod.rs  models.rs  operations.rs  quest_models.rs  quest_operations.rs
src/routes/: mod.rs  quests.js  quests.rs
src/utils/: discord.rs  error.rs  headers.js  mod.rs  quest_parser.rs
