[package]
name = "kythia-quest-api"
version = "0.1.0"
edition = "2021"
authors = ["kenndeclouv <kenndeclouv@gmail.com>"]
description = "Discord Quest API written in Rust with MySQL support"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "json"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration & Environment
dotenvy = "0.15"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Base64 encoding
base64 = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
